--- a/index.html
+++ b/index.html
@@ -1,76 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Document</title>
+     <link rel="stylesheet" href="index.css">
+</head>
+<body>
+     <div class="card">
+          <div class="circle"></div>
+          <div class="content">
+               <h2>Pepsi Cola</h2>
+               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque, consequatur! Unde enim soluta corporis eius molestias, animi, dolor error illum. </p>
+          <a href="#">Buy now </a>
+          </div>
+          <img src="can-real-sugar-reg.png" alt="">
 
-  <html>
-    <head>
-    <title>
-    My website
-    </title>
-    <link rel="stylesheet" href="azizjon.css">
-  </head>
 
-    <body>
-    <a href="H:\azizjon\IMG_20180610_182610.jpg" target="_blank" >  @khasanov_azizjon0414    </a>
-      </select>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d156240.60559759906!2d69.02421344430174!3d41.247486760341225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae89df662e346f%3A0xb6633167cc3c9163!2z0JfQsNC90LPQuNCw0YLQuNC90YHQutC40Lkg0YDQsNC50L7QvSwg0KPQt9Cx0LXQutC40YHRgtCw0L0!5e1!3m2!1sru!2s!4v1643647026214!5m2!1sru!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
-    </form>
-            <table border="1">
-            <thead>
-                <th>Name</th>
-                <th>Surname</th>
-                <th>Number</th>
-            </thead>
-                  <tbody>
-                    <td>Azizjon</td>
-                    <td>Xasanov</td>
-                    <td>+998939541027</td>
-                      <tr>
-                          <td> Rahmatjon</td>
-                          <td>Sulaymonov</td>
-                          <td>+998939560504</td>
-                      </tr>
-                      <tr>
-                          <td>Jasur</td>
-                          <td>Xotamov</td>
-                          <td>+998939632561</td>
-                      </tr>
-                    </tbody>
-            </table>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quam laudantium officiis repellendus aspernatur neque adipisci molestias nulla ex, eligendi quo sed culpa veniam aperiam necessitatibus quos nisi amet laboriosam!</p>
-    <br><br>
-    <hr>
-    <img src="H:\azizjon\IMG_20190507_192549.jpg" width="500" height="500" alt="azizjon">
-    <p> <em>Loren</em>  ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus ex nisi ratione molestias sequi culpa, nostrum velit dignissimos neque, possimus aliquid nihil, dolore quidem repellendus fugit cum consectetur impedit ad?  </p>
-    <p><b>Lorem</b> </p>
-    <ol>
-      <li><a href="H:\azizjon\philipp-pilz-iQRKBNKyRpo-unsplash.jpg" target="_blamk"> Salom </a></li>
-      <ul>
-      <li> salom</li>
-      </ul>
-      <li><a href="H:\azizjon\images (6).jpg" target="_blank"> Hayr </a> </li>
-    </ol>
-    <p> What do yo think my website </p>
-    <textarea name="comment"  cols="50" rows="5"placeholder="Enter your idea"></textarea>
-    <hr>
-      <div>
-    <d>
-      <div class="yangi">
-        <input type="text" placeholder="Enter your name">
-        <input type="text" placeholder="e-mail" >
-        <input type="password" placeholder="Enter your password">
-      </div>
-      <p>Plase your favorate footbal player </p>
-        <input type="radio" name="players" value="Ansu Fati">Ansu Fati
-        <input type="radio" name="players" value="Luuk De Jong">Luuk De Jong
-        <input type="radio" name="players" value="Adama Traore">Adama Traore
-        <input type="radio" name="players" value="Depay">Depay
-      <p> Plase your favorite footbal club   </p>
-        <input type="checkbox" name="club" value="Barselona">Barselona
-        <input type="checkbox" name="club" value="Manchester City">Manchester City
-        <input type="checkbox" name="club" value="PSG">PSG
-      <p>Enter your countr  </p>
-        <select name="club" >
-        <option value="Barselona">Barselona  </option>
-        <option value="manchester city"selected >Manchester City </option>
-        <option value="psg"> PSG</option</div>
-  </body>
-     
+     </div>
+</body>
 </html>
